appId: com.acunap.myexpoplayground
---
- launchApp
- assertVisible: "This is the default text."
- tapOn: "Click here"
- assertVisible: "The text has changed!"